--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,6 +1,6 @@
 /*COLOURS*/
 $primary-colour: #dcb036;
-$secondary-colour: #484759;
+$secondary-colour: #363c4c;
 
 /*FONTS*/
 $primary-font: 'Roboto Condensed', sans-serif;
