Adds logo component

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,6 +1,7 @@
 /*COLOURS*/
-$primary-colour: #dcb036;
+$primary-colour: #ff6448;
 $secondary-colour: #363c4c;
+$tertiary-colour: #ffaa8d;
 
 /*FONTS*/
 $primary-font: 'Roboto Condensed', sans-serif;
