Add Sass and image assets

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,7 +1,6 @@
 /*COLOURS*/
-$primary-colour: #ff6448;
-$secondary-colour: #363c4c;
-$tertiary-colour: #ffaa8d;
+$primary-colour: #006531;
+$secondary-colour: #412771;
 
 /*FONTS*/
 $primary-font: 'Roboto Condensed', sans-serif;
