Update logo component

--- a/components/logo/logo.html
+++ b/components/logo/logo.html
@@ -1,5 +1,3 @@
-<section class="logo">
-  <nuxt-link to="/" class="brand-logo">
-    <img src="~/assets/placeholder.png" alt="little-dreams-logo">
-  </nuxt-link>
-</section>
+<nuxt-link to="/" class="brand-logo">
+  <img src="~/assets/logo.png" alt="little-dreams-logo" class="h-100">
+</nuxt-link>
